--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,35 @@
- 
-    :root {
-        --main-color: #0D7132;
-    }
+body {
+    background-color: #fff;
+    color: green;
+}
+.container {
+    margin-top: 20px;
+}
+.form-control, .btn {
+    margin-bottom: 10px;
+}
+.table-container {
+    margin-top: 20px;
+}
+.pagination button {
+    margin: 5px;
+}
 
-  
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f5f5f5;
-        color: #333;
-    }
-
-    h1 {
-        font-size: 24px;
-        color: var(--main-color);
-    }
-
-    p {
-        font-size: 16px;
-        line-height: 1.5;
-    }
-
- 
 .btn {
-    background-color: var(--main-color);
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
+    margin-bottom: 10px;
+    background-color: green;
+    color: white;
+    border-color: white;
 }
 
 .btn:hover {
-    background-color: #7ba518;
+    background-color: white;
+    color: green;
+    border-color: green;
 }
 
-header {
-    background-color: var(--main-color);
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
+.table {
+    background-color: white;
+    border: 2px solid green;
+    color: black;
+    }
